FIX(main): Resolved trainDiv spacing issue by rebuilding tailwind with reset css for margin and padding excluded.

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
         box-sizing: border-box;
     }
 
-    body,
+    /* body,
     h1,
     h2,
     h3,
@@ -28,11 +28,10 @@
         margin: 0;
         padding: 0;
     }
-
     ul,
     ol {
         list-style: none;
-    }
+    } */
 
     img {
         max-width: 100%;
